trunk/Archive2/67/49be91bac79140/output
kill: Operation not permitted
kill: Operation not permitted
kill: Operation not permitted
main.cpp: In function ‘int main()’:
main.cpp:67:8: error: ‘void Event<Tn>::operator()(TArgn&& ...) [with TArgn = {int}; Tn = {int}]’ is private
   void operator( )( TArgn&&... argn ) {
        ^
main.cpp:148:23: error: within this context
     a.Woof( 0xBADCA11 ); 
                       ^
